# Xanadue

./: .gitignore  README.md  hacs.json  info.md  pyproject.toml
custom_components/xanadue/: __init__.py  classify.py  config_flow.py  const.py  coordinator.py  device_tracker.py  manifest.json  sensor.py  services.py  services.yaml
custom_components/xanadue/data/: __init__.py  correct.py  store.py
custom_components/xanadue/inference/: __init__.py  bayesian.py  likelihoods.py  priors.py
tests/: test_bayesian.py  test_classify.py
